# IvRAG

./: .env.example  .gitignore  app.py  capability_spec.py  catalog.py  config.py  dreamer.py  embedders.py  executor.py  grounder.py  hybrid_index.py  main.py  operations.py  pipeline.py  planner.py  prettify_df.ipynb  pyproject.toml  readme.md  report_functions.py  requirements.txt  retriever.py  schemas.py  test.ipynb  test_query.ipynb  test_query_via_llm.ipynb  utils.py
src/: __init__.py  capability_spec.py  catalog.py  config.py  engine.py  executor.py  grounder.py  operations.py  planner.py  retriever.py  schemas.py  state.py  utils.py
tests/: test_equivalence.py
