[project]
name = "work"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastparquet>=2024.11.0",
    "hf-xet>=1.1.10",
    "huggingface-hub>=0.35.3",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "openai>=2.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
torchvision = [
  { index = "pytorch-cu130" },
]
torchaudio = [
  { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
