[project]
name = "work"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "openai>=2.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "rapidfuzz>=3.14.3",
    "streamlit>=1.52.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
